# nexus_mind

./: .gitignore  Cargo.toml
proto/: lm_service.proto
services/lm/: config.py  lm_service_pb2.py  lm_service_pb2_grpc.py
services/lm-service/: config.py  generate_pb.sh  lm_service_pb2.py  lm_service_pb2_grpc.py  main.py  pyproject.toml
services/lm-service/core/: __init__.py  exceptions.py  provider.py
services/lm-service/core/providers/: __init__.py  llama_cpp.py  transformers.py
services/lm-service/models/: Qwen3.5-9B-Q4_K_M.gguf  omnicoder-9b-q4_k_m.gguf
services/lm-service/server/: grpc.py  service.py
services/lm-worker/: Cargo.toml  build.rs
services/lm-worker/src/: config.rs  error.rs  main.rs
services/lm-worker/src/agent/: mod.rs  parser.rs  prompt.rs  rag.rs  react.rs  schema.rs  state.rs
services/lm-worker/src/agent/tools/: calculator.rs  mod.rs  registry.rs
services/lm-worker/src/common/: llm_types.rs  mod.rs
services/lm-worker/src/common/tools/: calculator.rs  registry.rs
services/lm-worker/src/common/traits/: agent.rs  llm.rs  mod.rs  tool.rs
services/lm-worker/src/grpc/: mod.rs
services/lm-worker/src/provider/: grpc.rs
services/lm-worker/src/server/: dto.rs  mod.rs  routes.rs
services/lm-worker/src/traits/: agent.rs  llm.rs  mod.rs  tool.rs
services/lm/core/: provider.py  types.py
services/lm/core/providers/: __init__.py
services/lm/server/: service.py
