[package]
name = "lm-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tonic = "0.13"
prost = "0.13"
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive", "env"] }
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
meval = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
tonic-build = "0.13"
